--- a/css/custom.css
+++ b/css/custom.css
@@ -40,6 +40,7 @@ html {
 html,
 body {
     width: 100%;
+    height: 100%;
 }
 
 /* --x-- base style --x-- */
@@ -321,3 +322,195 @@ section.home .counter i {
 /* --x-- media query --x-- */
 
 /* --x-- home counter --x-- */
+
+/* ----- about section ----- */
+section.about {
+    margin: 0;
+    background: var(--white);
+}
+
+section.about .row {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* --x-- about section --x-- */
+
+/* ----- service box ----- */
+section.about .row:last-child {
+    width: 100%;
+    padding: 2vw;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.service-box {
+    width: 25rem;
+    padding: 1rem;
+    margin: 2rem;
+    text-align: center;
+    border-radius: 0.5vw;
+    color: var(--white);
+    transition: all 0.3s ease 0s;
+    -webkit-border-radius: 0.5vw;
+    -moz-border-radius: 0.5vw;
+    -ms-border-radius: 0.5vw;
+    -o-border-radius: 0.5vw;
+    box-shadow: var(--boxshadow);
+}
+
+.service-box:hover {
+    background: var(--grey) !important;
+}
+
+.service-box .service-icon {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    font-size: 35px;
+    background: #fff;
+    line-height: 70px;
+    border-radius: 100%;
+    transform: translateY(0);
+    transition: all 0.3s ease 0s;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+}
+
+.service-box:hover .service-icon {
+    transform: translateY(-100%);
+}
+
+.service-box .service-icon i {
+    color: var(--black);
+    transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -webkit-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -moz-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -ms-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -o-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+}
+
+.service-box:hover .service-icon i {
+    color: var(--grey) !important;
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+}
+
+.service-box h5 {
+    position: relative;
+    top: 40px;
+    margin: 0;
+    color: var(--black);
+    text-transform: uppercase;
+    transform: translateY(0%);
+    transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -webkit-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -moz-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -ms-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+    -o-transition: all 600ms cubic-bezier(0.5, -0.5, 0.2, 1.5) 0s;
+}
+
+.service-box:hover h5 {
+    top: -40px;
+    color: var(--color-01) !important;
+}
+
+.service-box p {
+    color: #fff;
+    margin: 0;
+    opacity: 0;
+    font-size: 0.8rem;
+    transition: all 0.3s linear 0s;
+}
+
+.service-box:hover p {
+    opacity: 1;
+}
+
+/* --x-- service box --x-- */
+
+/* ----- contact box ----- */
+.card-img-top {
+    width: 100%;
+    height: 12rem;
+}
+
+section.contact {
+    position: relative;
+    background: var(--color-01);
+}
+
+section.contact .container-fluid {
+    width: 100%;
+    height: 100%;
+    padding: 2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+section.contact .container-fluid .row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: right;
+    background: transparent;
+}
+
+section.contact .row .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    text-align: left !important;
+}
+
+section.contact .row .contact-info {
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 0.5rem 0;
+    color: var(--black);
+    text-transform: uppercase;
+    letter-spacing: 0.05rem;
+    text-decoration: none;
+}
+
+.contact-info i {
+    margin-right: 1rem;
+}
+
+section.contact .row .col-lg-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section.contact .contact-bg {
+    background: url("../img/bg-img-01.jpg");
+}
+
+section.contact .contact-bg::before {
+    top: 0;
+    left: 0;
+    content: '';
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+/* --x-- contact box --x-- */
