--- a/css/custom.css
+++ b/css/custom.css
@@ -499,7 +499,7 @@ section.contact .row .col-lg-3 {
 }
 
 section.contact .contact-bg {
-    background: url("../img/bg-img-01.jpg");
+    background: url("../img/bg/bg-01.jpg");
 }
 
 section.contact .contact-bg::before {
