windows reload bug fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -183,6 +183,22 @@ nav.navbar .dropdown-item {
     }
 }
 
+@media all and (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
+        display: none;
+    }
+
+    /* .navbar .nav-item:hover .nav-link {} */
+
+    .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
+}
+
 @media (max-width:991px) {
     nav.navbar {
         padding: 0.8vh 0.8vw;
